Updated README, got wireguard.py up to date with env variables

--- a/python/docker-compose.yml
+++ b/python/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - ALLOWEDIPS=0.0.0.0/0
       # Add monitoring env vars
       - WG_CONFIG_DIR=/config
+      - WG_INTERFACE=${WG_INTERFACE}
     volumes:
       - ./config:/config
       - /lib/modules:/lib/modules:ro
