Updated folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-python/config
-python/.env
-python/vpn-monitor/vpnmon/__pycache__
-python/vpn-monitor/web/__pycache__
+/config
+.env
+/vpn-monitor/vpnmon/__pycache__
+/vpn-monitor/web/__pycache__
 folder-structure.txt
-python/data/
+/data
